...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="MGc-8C-of0">
                                <rect key="frame" x="10" y="28" width="580" height="682"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="149" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D3j-WH-eBq">
                                        <rect key="frame" x="0.0" y="0.0" width="580" height="48"/>
                                        <accessibility key="accessibilityConfiguration" identifier="SaveButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" priority="900" constant="60" id="Vqo-oQ-o9j"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="30"/>
                                        <state key="normal" title="сохранить "/>
                                        <connections>
...
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.74770375844594594" colorSpace="calibratedRGB"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="петя иванов" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xwt-5B-K9M">
                                                <rect key="frame" x="80" y="0.0" width="500" height="0.0"/>
                                                <accessibility key="accessibilityConfiguration" identifier="NameField"/>
                                                <color key="textColor" red="0.60000002379999995" green="0.40000000600000002" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="25"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                        </subviews>
                                    </stackView>
...
