...
    override func tableView(tableView: UITableView, viewForHeaderInSection section: Int) -> UIView? {
        
        let header = PersonHeader()

        let button = header.headerButton

        button.accessibilityIdentifier = "HeaderButton"
        
        button.titleLabel?.font = UIFont.systemFontOfSize(40)
        button.setTitleColor(UIColor.whiteColor(), forState: .Normal)
        button.backgroundColor = UIColor.brownColor()
        button.addTarget(self, action: "editProfile:", forControlEvents: .TouchUpInside)
        
...
